Fixed the gapless looping statement

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url(https://smallenvelop.com/wp-content/uploads/2014/08/Preloader_11.gif) center no-repeat #000;
+    background: #000;
 }
 
 .cssload-dots {
